[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Gameboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Autoclicker.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Pattern.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Gameboard" parent="." instance=ExtResource( 1 )]

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Autoclicker" parent="." instance=ExtResource( 3 )]

[node name="AutoclickerButton" type="CheckButton" parent="."]
margin_left = 931.0
margin_top = 14.0
margin_right = 1007.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Patterns" type="Node2D" parent="."]

[node name="TestPattern" type="Node2D" parent="Patterns"]
script = ExtResource( 4 )
[connection signal="complete" from="Gameboard" to="." method="_on_Gameboard_complete"]
[connection signal="tile_changed" from="Gameboard" to="." method="_on_Gameboard_tile_changed"]
[connection signal="tile_clicked" from="Gameboard" to="." method="_on_Gameboard_tile_clicked"]
[connection signal="click" from="Autoclicker" to="." method="_on_Autoclicker_click"]
[connection signal="toggled" from="AutoclickerButton" to="." method="_on_AutoclickerButton_toggled"]
